tests/ui/reborrow/coerce-shared-nested.stderr
error: implementing `CoerceShared` does not allow multiple lifetimes or fields to be coerced
  --> $DIR/coerce-shared-nested.rs:48:13
   |
LL | impl<'a, T> CoerceShared<OuterRef<'a, T>> for OuterMut<'a, T> {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

